--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ body {
   text-align: left;
   text-decoration: none;
   font-size: 35px;
-  font-family: fantasy;
+  font-family: Helvetica;
 }
 
 
