--- a/css/style.css
+++ b/css/style.css
@@ -539,7 +539,7 @@ body {
 #recent-blogs .card-title {
     
     font-size: 18px;
-    font-family: fantasy;
+    font-family: Helvetica;
 }
 #recent-blogs .card-text {
     text-align: justify;
