--- a/css/style.css
+++ b/css/style.css
@@ -590,7 +590,7 @@ body {
 #about-us .logo_for_about_us b {
   color: #000000;
   font-size: 50px;
-  font-family: fantasy;
+  font-family: Helvetica;
 }
 
 
@@ -740,7 +740,7 @@ body {
   text-align: left;
   text-decoration: none;
   font-size: 35px;
-  font-family: fantasy;
+  font-family: Helvetica;
   padding-left: 20px;
 }
 
